jumping thumbnails fix

--- a/assets/less/scenarios/ScenarioThumbnail.less
+++ b/assets/less/scenarios/ScenarioThumbnail.less
@@ -12,6 +12,7 @@
 
 .scenario-thumbnail-image-wrapper {
   margin-bottom: 0 !important;
+  min-height: 254px;
 }
 
 .scenario-thumbnail-header {
